# prompthive

./: .gitignore  LICENSE  README.md
backend/: .env.template  .flaskenv  README.md  pyproject.toml
backend/src/: __init__.py  app.py  credentials.template.json
backend/src/models/: hint_message.py  oatutor_hints.py  prompt_hint.py  prompt_hint_scratchpad.py
backend/src/models/authentication_models/: user.py
backend/src/services/: chatgpt_service.py  google_sheet_service.py  latex_converter_service.py  prompt_library_service.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: config.jsx  index.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Header/: NavHeader.jsx
frontend/src/components/PromptHive/: GoogleSheetManager.jsx  HintExporter.jsx  HintSettings.jsx  HintViewer.jsx  LatexHelper.jsx  LayoutFlow.jsx  PromptEditor.jsx  PromptManager.jsx  PromptTreeVisualiser.jsx  SheetContent.jsx  usePromptHistory.jsx
frontend/src/scss/: hintviewer.scss  prompteditor.scss
frontend/src/services/: googleSheetsService.js  promptHintLibraryService.js  promptHiveAPI.js
frontend/src/utilities/: utils.jsx
